fix(desktop): adjust transactions tab's quick view/actions' size and spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -700,8 +700,9 @@ body {
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 4rem;
-  margin-bottom: 1rem;
+  height: 100%;
+  padding: 1rem 0;
+  padding-right: 1rem;
   gap: 1rem;
 }
 .desktop-quick-view-actions-sidebar > .transaction-filters > * {
